// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scale is falsy 1`] = `
<p
  className="flex-none price"
  style={Object {}}
>
  123
  <sup>
    .
    55
  </sup>
   
  <span
    className="price_currency"
  />
</p>
`;

exports[`shallow rendering 1`] = `
<p
  className="flex-none price"
  style={
    Object {
      "transform": "scale(27)",
      "transformOrigin": "0 479.25px",
    }
  }
>
  123
  <sup>
    .
    55
  </sup>
   
  <span
    className="price_currency"
  />
</p>
`;
